# Software-training

C/: Mem_copy  Mem_copy.c  Memory_Alignment  Memory_Alignment.c  Student_manange  Student_manange.c  Student_manange.h  arr_test.c  omp_test  omp_test.c  test1  test1.c  typedef  typedef.c
C/Task/Q1/: main  main.c  mathlib.c
C/Task/Q2/: main  main.c  mathlib.h
C/homework/: priority_queue.c  priority_queue.h  readme.md  scheduler  scheduler.c  task.h
C/homework/Q1/: resourcepool  resourcepool.c
IO/: Blocking  Blocking.c  IOtest  IOtest.c  Non-blocking  Non-blocking.c  Select  Select.c  Time  Time.c  record_dmesg.sh  test.txt  test_file.txt
Memory/: largefile.txt  memorypool.c  mmap  mmap.c  stack_heap_test.c
Memory/homework/: leak_memory  leak_memory.c  memory_optimization  memory_optimization.c  memory_optimization_test  memory_optimization_test.c  memory_pool_linear  memory_pool_linear.c  memory_pool_linear.h  memory_pool_linklist  memory_pool_linklist.c  memory_pool_linklist.h  readme.md
ParkSystem/: CMakeLists.txt
ParkSystem/include/: user.h
ParkSystem/src/: main.c  user.c
Simple_Redis/: CMakeLists.txt  read.me
Simple_Redis/include/: Linklist.h  dictEntry.h
Simple_Redis/src/: Linklist.c  dictEntry.c  main.c
Thread/: Cal_square  Cal_square.c  Message_Queue.c  daemon.c  fork  fork.c  priority  priority.c  schedule  schedule.c  thread_create.c  thread_test1  thread_test1.c  thread_test2.c  threadpool.c
Thread/homework/: process_monitor  process_monitor.c  readme.md  resource_isolation  resource_isolation.c  task_scheduler  task_scheduler.c  test_process.sh
Title/: Q1  Q1.c
